--- a/index.html
+++ b/index.html
@@ -913,9 +913,7 @@
                     <strong>LinkedIn</strong>
                     <span>linkedin.com/in/luisraulmargalit</span>
                 </a>
-                    <span id="email">luismargalit@gmail.com</span>
-<button onclick="copyEmail()">Copy</button>
-
+                <a href="mailto:luismargalit@gmail.com" class="contact-card">
                     <strong>Email</strong>
                     <span>luismargalit@gmail.com</span>
                 </a>
