--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 
     <!-- HOME PAGE -->
     <div id="home" class="page active">
-        <a class="back-link" onclick="showPage('home')">← Back to Work</a>
         <div class="hero">
             <p class="subtitle">Product Designer</p>
             <h1>Luis Margalit</h1>
@@ -498,7 +497,6 @@
 
     <!-- MINYAN CASE STUDY -->
     <div id="minyan" class="page">
-        <a class="back-link" onclick="showPage('home')">← Back to Work</a>
         <div class="minyan-container">
             
             <!-- Hero -->
@@ -843,7 +841,7 @@
             </div>
 
             <!-- Reflection -->
-            <div class="minyan-reflection">
+            <div class="minyan-section">
                 <h3>Outcome & Reflection</h3>
                 <p>This project demonstrates how thoughtful UX design can support real-world community coordination challenges. By prioritizing clarity, accessibility, and low-friction interaction, the Mynian website helps ensure prayer services can happen consistently in smaller communities.</p>
                 <h3 style="margin-top: 40px;">Future Improvements</h3>
