--- a/index.html
+++ b/index.html
@@ -841,7 +841,7 @@
             </div>
 
             <!-- Reflection -->
-            <div class="minyan-section">
+            <div class="minyan-reflection">
                 <h3>Outcome & Reflection</h3>
                 <p>This project demonstrates how thoughtful UX design can support real-world community coordination challenges. By prioritizing clarity, accessibility, and low-friction interaction, the Mynian website helps ensure prayer services can happen consistently in smaller communities.</p>
                 <h3 style="margin-top: 40px;">Future Improvements</h3>
