--- a/index.html
+++ b/index.html
@@ -913,10 +913,10 @@
                     <strong>LinkedIn</strong>
                     <span>linkedin.com/in/luisraulmargalit</span>
                 </a>
-                <a href="mailto:luismargalit@gmail.com" class="contact-card">
-                    <strong>Email</strong>
-                    <span>luismargalit@gmail.com</span>
-                </a>
+                <div class="contact-card">
+    <strong>Email</strong>
+    <span>youremail@example.com</span>
+</div>
             </div>
         </div>
     </div>
@@ -937,7 +937,7 @@
                 </svg>
                 <h2 style="font-size: 24px; font-weight: 600; margin-bottom: 16px; color: #1d1d1f;">Resume</h2>
                 <p style="font-size: 16px; color: #6e6e73; margin-bottom: 32px;">Download my resume to learn more about my experience and background.</p>
-                <a href="https://docs.google.com/document/d/1cMFvqghThc8nDpapq8C6tpfzf_lgxR8fc-Si5Ay7eEc/edit?usp=sharing" target="_blank" style="display: inline-block; margin-top: 32px; padding: 16px 32px; background: #1d1d1f; color: white; text-decoration: none; border-radius: 8px; font-weight: 500; transition: opacity 0.3s ease;">
+                <a href="luis_margalit_resume.pdf" target="_blank" style="display: inline-block; margin-top: 32px; padding: 16px 32px; background: #1d1d1f; color: white; text-decoration: none; border-radius: 8px; font-weight: 500; transition: opacity 0.3s ease;">
                     View Resume
                 </a>
             </div>
