--- a/index.html
+++ b/index.html
@@ -915,7 +915,7 @@
                 </a>
                 <div class="contact-card">
     <strong>Email</strong>
-    <span>youremail@example.com</span>
+    <span>luismargalit@gmail.com</span>
 </div>
             </div>
         </div>
