--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a onclick="showPage('home')" id="nav-home">Work <span class="dropdown-arrow">▼</span></a>
         <ul class="dropdown-menu">
             <li><a onclick="showPage('smartcart')">SmartCart</a></li>
-            <li><a onclick="showPage('minyan')">Minyan</a></li>
+            <li><a onclick="showPage('minyan')">Mynian</a></li>
         </ul>
     </li>
     <li><a onclick="showPage('about')" id="nav-about">About</a></li>
